--- a/header.css
+++ b/header.css
@@ -5,7 +5,7 @@
 }
 
 #logo-img {
-    background: url('../csinaze.github.io/images/logo-img.png');
+    background: url('images/logo-img.png');
     width: 150px;
     height: 150px;
     margin-bottom: 15px;
